--- a/index.html
+++ b/index.html
@@ -20,20 +20,11 @@
                 <h1 class="title">Vlog</h1>
             </header>
             <div class="content" id="contentMp4"></div>
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-content-inner">
-                        <video controls="controls" preload="auto" width="100%" height="100%">
-                            <source src="" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
-            </div>
 
             <div class="bar bar-tab">
                 <div class="row">
                     <div class="col-50">
-                        <a onclick="" class="button button-big button-fill">我的</a>
+                        <a onclick="getList()" class="button button-big button-fill">我的</a>
                     </div>
                     <div class="col-50">
                         <a onclick="" class="button button-big button-fill">上传</a>
@@ -48,22 +39,22 @@
             getList()
         };
         function getList() {
-            $.getJSON(
+            $.getJSON (
                 // 请求url
-                "http://127.0.0.1:8090/",
+                "http://127.0.0.1:8090/api/list",
                 // 请求参数
                 null,
                 // 返回结果
                 function (result) {
                     let testDiv = document.getElementById("contentMp4");
                     testDiv.innerHTML = "";
-                    for (let i=0; i<result.length, i++) {
+                    for (let i=0; i<result.length; i++) {
                         testDiv.innerHTML += `
                             <div class="card">
                             <div class="card-content">
                                 <div class="card-content-inner">
                                     <video controls="controls" preload="auto" width="100%" height="100%">
-                                        <source src="" type="video/mp4">
+                                        <source src=`+result[i]+` type="video/mp4">
                                     </video>
                                 </div>
                             </div>
